# bangdream

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  __main__.py  auto_click_chart.py  download_charts.py  gui.py  song_search.py
tests/: test_auto_click_chart.py  test_bestdori_chart.py  test_song_search.py
tools/: evdev_scheduler_x86_64.s
web/: app.js  index.html  server.py  styles.css
