[project]
name = "bangdream-chart-viewer"
version = "0.1.0"
description = "A local BanG Dream chart viewer backed by the Bestdori API."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2.2",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "pillow>=10.0.0",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "pykakasi>=2.3.0",
    "pynput>=1.7.7",
    "uvicorn[standard]>=0.34.0",
    "wintouch>=0.1.0",
]

[tool.uv]
package = false
